--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,14 @@
   color: #ffffff;
 }
 
+@media (max-width: 991px) {
+  .bg-light {
+    padding-top: 50px;
+  }
+}
 /* Forms */
 form {
-  margin: auto;
+  padding-top: 120px;
 }
 
 /*# sourceMappingURL=style.css.map */
