--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ body {
   border-right: 2px solid #98ab7a;
 }
 
-#homeNav, #login-userNav {
+#homeNav,
+#login-userNav {
   border-left: 2px solid #98ab7a;
 }
 
@@ -40,7 +41,8 @@ body {
   .bg-light {
     padding-top: 30px;
   }
-  #homeNav, #login-userNav {
+  #homeNav,
+  #login-userNav {
     border-left: none;
   }
   .navbar-light .navbar-nav .active > .nav-link {
@@ -116,7 +118,7 @@ form {
   }
 }
 
-/* Resonsive Award Winner */
+/* Responsive Award Winner */
 @media (max-width: 991px) {
   #home #award-winner {
     width: 8.8em;
@@ -159,6 +161,205 @@ form {
 
 @media (max-width: 630px) {
   #home #award-winner {
+    display: none;
+  }
+}
+
+/* WELCOME TO NOVA CAPITAL */
+#welcome-nova-capital {
+  background-color: #27282b;
+  /* NOVA ARTICLE */
+}
+
+#welcome-nova-capital #nova-article h1 {
+  color: #d9d7e5;
+  text-transform: uppercase;
+  text-align: center;
+  font-style: italic;
+  padding-top: 40px;
+}
+
+#welcome-nova-capital #nova-article .img-fluid {
+  padding-top: 80px;
+  margin-left: 75px;
+  width: 105%;
+  height: 100vh;
+  opacity: 0.7;
+}
+
+#welcome-nova-capital #nova-article .img-fluid:hover {
+  opacity: 1;
+}
+
+#welcome-nova-capital #nova-article article {
+  background-color: #36393d;
+  vertical-align: middle;
+  margin-top: 100px;
+  text-align: center;
+  height: 80vh;
+}
+
+#welcome-nova-capital #nova-article article h2 {
+  padding-top: 45px;
+  color: #98ab7a;
+  font-size: 45px;
+  letter-spacing: 2px;
+}
+
+#welcome-nova-capital #nova-article article h2 u {
+  text-decoration: none;
+  border-bottom: 1px solid #98ab7a;
+}
+
+#welcome-nova-capital #nova-article article h3 {
+  font-style: italic;
+  color: #d9d7e5;
+  font-size: 35px;
+  padding-top: 20px;
+}
+
+#welcome-nova-capital #nova-article article p {
+  font-size: 16px;
+  color: #98ab7a;
+  padding-top: 15px;
+  width: 300px;
+  margin: auto;
+}
+
+#welcome-nova-capital #nova-article article h4 {
+  font-size: 15px;
+  color: #d9d7e5;
+  padding-top: 35px;
+  width: 300px;
+  margin: auto;
+}
+
+/* NOVA ARTICLE RESPONSIVE */
+@media (max-width: 991px) {
+  #welcome-nova-capital #nova-article .img-fluid {
+    width: 100%;
+    height: auto;
+    margin-left: 0;
+  }
+  #welcome-nova-capital #nova-article article {
+    width: 70%;
+    margin: auto;
+    height: auto;
+    z-index: 999;
+    margin-top: -100px;
+  }
+}
+
+@media (max-width: 800px) {
+  #welcome-nova-capital #nova-article article h2 {
+    font-size: 2em;
+  }
+  #welcome-nova-capital #nova-article article h3 {
+    font-size: 2em;
+  }
+}
+
+/* KITCHEN ARTICLE */
+#kitchen-article article {
+  background-color: #36393d;
+  vertical-align: middle;
+  margin-top: 100px;
+  text-align: center;
+  height: 80vh;
+  position: absolute;
+  z-index: 999;
+  width: 600px;
+  margin-left: 75px;
+}
+
+#kitchen-article article h2 {
+  padding-top: 45px;
+  color: #98ab7a;
+  font-size: 45px;
+  letter-spacing: 2px;
+}
+
+#kitchen-article article h2 u {
+  text-decoration: none;
+  border-bottom: 1px solid #98ab7a;
+}
+
+#kitchen-article article h3 {
+  font-style: italic;
+  color: #d9d7e5;
+  font-size: 35px;
+  padding-top: 20px;
+}
+
+#kitchen-article article p {
+  font-size: 16px;
+  color: #98ab7a;
+  padding-top: 15px;
+  width: 300px;
+  margin: auto;
+}
+
+#kitchen-article .img-fluid {
+  padding-top: 80px;
+  margin-left: -75px;
+  width: 105%;
+  height: 100vh;
+  opacity: 0.7;
+}
+
+#kitchen-article .img-fluid:hover {
+  opacity: 1;
+}
+
+/* KITCHEN ARTICLE RESPONSIVE */
+@media (max-width: 991px) {
+  #welcome-nova-capital #kitchen-article article {
+    position: absolute;
+    width: 35%;
+    margin: auto;
+    margin-top: 107px;
+  }
+  #welcome-nova-capital #kitchen-article article h2 {
+    font-size: 2em;
+  }
+  #welcome-nova-capital #kitchen-article article h3 {
+    font-size: 1.6em;
+  }
+  #welcome-nova-capital #kitchen-article .img-fluid {
+    width: 100%;
+    height: auto;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 870px) {
+  #welcome-nova-capital #kitchen-article article {
+    position: absolute;
+    height: auto;
+  }
+  #welcome-nova-capital #kitchen-article article h2 {
+    font-size: 1.6em;
+  }
+  #welcome-nova-capital #kitchen-article article h3 {
+    font-size: 1.2em;
+  }
+  #welcome-nova-capital #kitchen-article article p {
+    font-size: 0.5em;
+    width: auto;
+  }
+}
+
+@media (max-width: 620px) {
+  #welcome-nova-capital #kitchen-article article h2 {
+    font-size: 0.9em;
+  }
+  #welcome-nova-capital #kitchen-article article h3 {
+    font-size: 0.9em;
+  }
+}
+
+@media (max-width: 570px) {
+  #welcome-nova-capital #kitchen-article article {
     display: none;
   }
 }
