--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,42 @@
 $black-color: #000000;
 $white-color: #ffffff;
 $white-green: #98ab7a;
+$smoke-white: #d9d7e5;
+
+@mixin article-novaSection() {
+  background-color: #36393d;
+      vertical-align: middle;
+      margin-top: 100px;
+      text-align: center;
+      height: 80vh;
+}
+
+@mixin h2-novaSection() {
+  padding-top: 45px;
+  color: $white-green;
+  font-size: 45px;
+  letter-spacing: 2px;
+}
+
+@mixin underlineH2() {
+  text-decoration: none;
+  border-bottom: 1px solid $white-green;
+}
+
+@mixin h3-novaSection() {
+  font-style: italic;
+  color: $smoke-white;
+  font-size: 35px;
+  padding-top: 20px;
+}
+
+@mixin p-novaSection {
+  font-size: 16px;
+  color: $white-green;
+  padding-top: 15px;
+  width: 300px;
+  margin: auto;
+}
 
 body {
   font-family: Lato, sans-serif;
@@ -12,7 +48,7 @@ body {
 .bg-light {
   background: #2b383c !important;
   padding-top: 30px;
-  border-bottom: 4px solid$white-green;
+  border-bottom: 4px solid $white-green;
   font-size: 24px;
   letter-spacing: 1px;
 
@@ -32,30 +68,28 @@ body {
   border-right: 2px solid $white-green;
 }
 
-#homeNav, #login-userNav {
+#homeNav,
+#login-userNav {
   border-left: 2px solid $white-green;
 }
 
 /* NAVBAR TOGGLER */
 
 .navbar-light .navbar-toggler {
-
   border-color: $white-color;
 }
-
 
 @media (max-width: 991px) {
   .bg-light {
     padding-top: 30px;
-
   }
 
-  #homeNav, #login-userNav {
+  #homeNav,
+  #login-userNav {
     border-left: none;
   }
 
   .navbar-light .navbar-nav .active > .nav-link {
-
     border: none;
   }
 }
@@ -68,7 +102,6 @@ form {
 /* HOME */
 
 #home {
-
   h1 {
     position: absolute;
     top: 85%;
@@ -122,26 +155,21 @@ form {
 
 @media (max-width: 1048px) {
   #home {
-
     h1 {
-   
       top: 70%;
       font-size: 2.4em;
 
       #header-text {
-      
         font-size: 0.4em;
         font-weight: bold;
-       }
+      }
     }
-   
   }
 }
 
-/* Resonsive Award Winner */
+/* Responsive Award Winner */
 @media (max-width: 991px) {
   #home {
-
     #award-winner {
       width: 8.8em;
       height: 8.84em;
@@ -149,6 +177,7 @@ form {
       padding-top: 37px;
       margin-top: 160px;
     }
+
     #arrow {
       border-style: solid;
       border-width: 30px 67px 0 73px;
@@ -159,18 +188,14 @@ form {
     }
 
     h1 {
-  
       width: 90%;
       margin-top: 80px;
       font-size: 2.4em;
 
       #header-text {
-
         font-size: 0.4em;
-       }
+      }
     }
-  
-
   }
 }
 
@@ -196,6 +221,214 @@ form {
   #home {
     #award-winner {
       display: none;
+    }
+  }
+}
+
+/* WELCOME TO NOVA CAPITAL */
+
+#welcome-nova-capital {
+  background-color: #27282b;
+
+  /* NOVA ARTICLE */
+
+  #nova-article {
+    h1 {
+      color: $smoke-white;
+      text-transform: uppercase;
+      text-align: center;
+      font-style: italic;
+      padding-top: 40px;
+    }
+
+    .img-fluid {
+      padding-top: 80px;
+      margin-left: 75px;
+      width: 105%;
+      height: 100vh;
+      opacity: 0.7;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+
+    article {
+     @include article-novaSection();
+
+      h2 {
+        @include h2-novaSection();
+        u {
+          @include underlineH2();
+        }
+      }
+
+      h3 {
+        @include h3-novaSection();
+      }
+
+      p {
+        @include p-novaSection();
+      }
+      h4 {
+        font-size: 15px;
+        color: $smoke-white;
+        padding-top: 35px;
+        width: 300px;
+        margin: auto;
+      }
+    }
+  }
+}
+
+/* NOVA ARTICLE RESPONSIVE */
+
+@media (max-width: 991px) {
+  #welcome-nova-capital {
+    #nova-article {
+      .img-fluid {
+        width: 100%;
+        height: auto;
+        margin-left: 0;
+      }
+
+      article {
+        width: 70%;
+        margin: auto;
+        height: auto;
+        z-index: 999;
+        margin-top: -100px;
+      }
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  #welcome-nova-capital {
+    #nova-article {
+      article {
+        h2 {
+          font-size: 2em;
+        }
+        h3 {
+          font-size: 2em;
+        }
+      }
+    }
+  }
+}
+
+/* KITCHEN ARTICLE */
+
+#kitchen-article {
+  article {
+    @include article-novaSection();
+    position: absolute;
+    z-index: 999;
+    width: 600px;
+    margin-left: 75px;
+
+    h2 {
+      @include h2-novaSection();
+
+      u {
+        @include underlineH2();
+      }
+    }
+
+    h3 {
+    @include h3-novaSection();
+    }
+
+    p {
+  @include p-novaSection();
+    }
+  }
+
+  .img-fluid {
+    padding-top: 80px;
+    margin-left: -75px;
+    width: 105%;
+    height: 100vh;
+    opacity: 0.7;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
+
+/* KITCHEN ARTICLE RESPONSIVE */
+
+@media (max-width: 991px) {
+  #welcome-nova-capital {
+    #kitchen-article {
+      article {
+        // position: absolute;
+        position: absolute;
+        width: 35%;
+        margin: auto;
+        margin-top: 107px;
+
+        h2 {
+          font-size: 2em;
+        }
+        h3 {
+          font-size: 1.6em;
+        }
+      }
+
+      .img-fluid {
+        width: 100%;
+        height: auto;
+        margin-left: 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 870px) {
+  #welcome-nova-capital {
+    #kitchen-article {
+      article {
+        position: absolute;
+        height: auto;
+        h2 {
+          font-size: 1.6em;
+        }
+        h3 {
+          font-size: 1.2em;
+        }
+        p {
+          font-size: 0.5em;
+          width: auto;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 620px) {
+  #welcome-nova-capital {
+    #kitchen-article {
+      article {
+        h2 {
+          font-size: 0.9em;
+        }
+        h3 {
+          font-size: 0.9em;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 570px) {
+  #welcome-nova-capital {
+    #kitchen-article {
+      article {
+        display: none;
+      }
     }
   }
 }
