--- a/css/style.scss
+++ b/css/style.scss
@@ -256,8 +256,7 @@ form {
     article {
      @include article-novaSection();
 
-      h2 {
-        @include h2-novaSection();
+      h2 {   @include h2-novaSection();
         u {
           @include underlineH2();
         }
@@ -315,9 +314,11 @@ form {
         }
         p {
             font-size: 0.7em;
+           // width: auto;
         }
         h4 {
           font-size: 0.7em;
+         // width: auto;
         }
       }
     }
@@ -336,9 +337,11 @@ form {
         }
         p {
             font-size: 0.5em;
+            width: inherit;
         }
         h4 {
           font-size: 0.5em;
+          width: inherit;
         }
       }
     }
@@ -353,7 +356,7 @@ form {
     position: absolute;
     z-index: 999;
     width: 600px;
-    margin-left: 75px;
+    margin-left: 125px;
 
     h2 {
       @include h2-novaSection();
