--- a/css/style.css
+++ b/css/style.css
@@ -185,10 +185,18 @@ form {
   width: 105%;
   height: 100vh;
   opacity: 0.7;
+  -webkit-transition: -webkit-transform .2s;
+  transition: -webkit-transform .2s;
+  transition: transform .2s;
+  transition: transform .2s, -webkit-transform .2s;
 }
 
 #welcome-nova-capital #nova-article .img-fluid:hover {
   opacity: 1;
+  /* IE 9 */
+  -webkit-transform: scale(1.1);
+  /* Safari 3-8 */
+  transform: scale(1.1);
 }
 
 #welcome-nova-capital #nova-article article {
@@ -328,10 +336,18 @@ form {
   width: 105%;
   height: 100vh;
   opacity: 0.7;
+  -webkit-transition: -webkit-transform .2s;
+  transition: -webkit-transform .2s;
+  transition: transform .2s;
+  transition: transform .2s, -webkit-transform .2s;
 }
 
 #kitchen-article .img-fluid:hover {
   opacity: 1;
+  /* IE 9 */
+  -webkit-transform: scale(1.1);
+  /* Safari 3-8 */
+  transform: scale(1.1);
 }
 
 /* KITCHEN ARTICLE RESPONSIVE */
