--- a/css/style.scss
+++ b/css/style.scss
@@ -40,6 +40,13 @@ $smoke-white: #d9d7e5;
   margin: auto;
 }
 
+@mixin novaImagesHover() {
+  opacity: 1;
+  -ms-transform: scale(1.1); /* IE 9 */
+  -webkit-transform: scale(1.1); /* Safari 3-8 */
+  transform: scale(1.1); 
+}
+
 body {
   font-family: Lato, sans-serif;
 }
@@ -247,9 +254,10 @@ form {
       width: 105%;
       height: 100vh;
       opacity: 0.7;
+      transition: transform .2s;
 
       &:hover {
-        opacity: 1;
+      @include novaImagesHover();
       }
     }
 
@@ -381,9 +389,10 @@ form {
     width: 105%;
     height: 100vh;
     opacity: 0.7;
+    transition: transform .2s;
 
     &:hover {
-      opacity: 1;
+      @include novaImagesHover();
     }
   }
 }
