css zoom update

--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ form {
 /* WELCOME TO NOVA CAPITAL */
 #welcome-nova-capital {
   background-color: #27282b;
+  padding-bottom: 45px;
   /* NOVA ARTICLE */
 }
 
