--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ form {
   letter-spacing: 6px;
   border: 1px solid #ffffff;
   border-radius: 2px;
+  z-index: 999;
 }
 
 #home h1 p {
@@ -186,10 +187,10 @@ form {
   width: 105%;
   height: 100vh;
   opacity: 0.7;
-  -webkit-transition: -webkit-transform .2s;
-  transition: -webkit-transform .2s;
-  transition: transform .2s;
-  transition: transform .2s, -webkit-transform .2s;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
 }
 
 #welcome-nova-capital #nova-article .img-fluid:hover {
@@ -337,10 +338,10 @@ form {
   width: 105%;
   height: 100vh;
   opacity: 0.7;
-  -webkit-transition: -webkit-transform .2s;
-  transition: -webkit-transform .2s;
-  transition: transform .2s;
-  transition: transform .2s, -webkit-transform .2s;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
 }
 
 #kitchen-article .img-fluid:hover {
@@ -401,6 +402,49 @@ form {
 @media (max-width: 570px) {
   #welcome-nova-capital #kitchen-article article {
     display: none;
+  }
+}
+
+/* LOCATION */
+#location {
+  background-color: #27282b;
+}
+
+#location h1 {
+  color: #d9d7e5;
+  letter-spacing: 2px;
+}
+
+#location article {
+  text-align: center;
+  color: #98ab7a;
+  font-size: 30px;
+}
+
+#location article ul li {
+  text-decoration: none;
+  list-style-type: none;
+  padding: 10px 0;
+}
+
+@media (max-width: 991px) {
+  #location iframe {
+    width: 90%;
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 720px) {
+  #location h1 {
+    font-size: 1em;
+  }
+  #location article ul {
+    margin-top: 23px;
+  }
+  #location article ul li {
+    padding: 0;
+    font-size: 0.8em;
   }
 }
 /*# sourceMappingURL=style.css.map */
