--- a/css/style.scss
+++ b/css/style.scss
@@ -546,3 +546,18 @@ footer {
     padding: 7px;
   }
 }
+
+@media (max-width: 991px) {
+
+  footer {
+
+    h2 {
+      font-size: 1.5em;
+    }
+
+    #icons {
+     text-align: center;
+     padding-top: 10px;
+    }
+  }
+}
