--- a/css/style.css
+++ b/css/style.css
@@ -187,18 +187,6 @@ form {
   width: 105%;
   height: 100vh;
   opacity: 0.7;
-  -webkit-transition: -webkit-transform 0.2s;
-  transition: -webkit-transform 0.2s;
-  transition: transform 0.2s;
-  transition: transform 0.2s, -webkit-transform 0.2s;
-}
-
-#welcome-nova-capital #nova-article .img-fluid:hover {
-  opacity: 1;
-  /* IE 9 */
-  -webkit-transform: scale(1.1);
-  /* Safari 3-8 */
-  transform: scale(1.1);
 }
 
 #welcome-nova-capital #nova-article article {
@@ -447,6 +435,50 @@ form {
     padding: 0;
     font-size: 0.8em;
   }
+}
+
+/* DEVELOPMENTS */
+#developments {
+  background-color: whitesmoke;
+  padding: 50px 0;
+}
+
+#developments h1 {
+  padding-bottom: 30px;
+}
+
+#developments .card-img {
+  height: 42vh;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
+}
+
+#developments .card-img:hover {
+  opacity: 1;
+  /* IE 9 */
+  -webkit-transform: scale(1.1);
+  /* Safari 3-8 */
+  transform: scale(1.1);
+}
+
+#developments ul li {
+  font-size: 14px;
+  padding-top: 7px;
+  list-style-type: none;
+}
+
+#developments .btn-primary {
+  background-color: #a99748;
+  border: 1px solid #a99748;
+  border-radius: 0;
+  letter-spacing: 1px;
+}
+
+#developments .btn-primary:hover {
+  background-color: #161b32;
+  border: 1px solid #161b32;
 }
 
 /* FOOTER */
