--- a/css/style.scss
+++ b/css/style.scss
@@ -256,11 +256,6 @@ form {
       width: 105%;
       height: 100vh;
       opacity: 0.7;
-      transition: transform 0.2s;
-
-      &:hover {
-        @include novaImagesHover();
-      }
     }
 
     article {
@@ -325,11 +320,9 @@ form {
         }
         p {
           font-size: 0.7em;
-         
         }
         h4 {
           font-size: 0.7em;
-          
         }
       }
     }
@@ -517,7 +510,6 @@ form {
     }
 
     article ul {
-
       margin-top: 23px;
 
       li {
@@ -528,6 +520,50 @@ form {
   }
 }
 
+
+/* DEVELOPMENTS */
+
+#developments {
+  background-color: whitesmoke;
+  padding: 50px 0;
+
+  h1 {
+    padding-bottom: 30px;
+  }
+
+  .card-img {
+    height: 42vh;
+    transition: transform 0.2s;
+
+    &:hover {
+      @include novaImagesHover();
+    }
+  }
+
+  ul {
+    li {
+      font-size: 14px;
+      padding-top: 7px;
+      list-style-type: none;
+    }
+  }
+
+  .btn-primary {
+    background-color: #a99748;
+    border: 1px solid #a99748;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    letter-spacing: 1px;
+
+    &:hover {
+      background-color: #161b32;
+      border: 1px solid #161b32;
+    }
+  }
+}
+
+
 /* FOOTER */
 
 footer {
@@ -536,7 +572,7 @@ footer {
   padding: 30px;
 
   h2 {
-  text-align: center;
+    text-align: center;
     margin: auto;
   }
   .fab {
@@ -548,16 +584,14 @@ footer {
 }
 
 @media (max-width: 991px) {
-
   footer {
-
     h2 {
       font-size: 1.5em;
     }
 
     #icons {
-     text-align: center;
-     padding-top: 10px;
+      text-align: center;
+      padding-top: 10px;
     }
   }
 }
