--- a/css/style.scss
+++ b/css/style.scss
@@ -528,7 +528,7 @@ form {
   padding: 50px 0;
 
   h1 {
-    padding-bottom: 30px;
+    padding: 50px 0;
   }
 
   .card-img {
@@ -593,5 +593,13 @@ footer {
       text-align: center;
       padding-top: 10px;
     }
+  }
+}
+
+/*  ABOUT */
+
+#about {
+  h1 {
+    padding-top: 110px;
   }
 }
