--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,605 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap");
+@import "partials-css/variables";
+@import "partials-css/mixins";
+@import "partials-css/nav";
+@import "partials-css/home";
+@import "partials-css/novacapital";
+@import "partials-css/location";
+@import "partials-css/footer";
+@import "partials-css/developments";
+@import "partials-css/about";
+@import "partials-css/forms";
 
-$black-color: #000000;
-$white-color: #ffffff;
-$white-green: #98ab7a;
-$smoke-white: #d9d7e5;
-
-@mixin article-novaSection() {
-  background-color: #36393d;
-  vertical-align: middle;
-  margin-top: 100px;
-  text-align: center;
-  height: 80vh;
-}
-
-@mixin h2-novaSection() {
-  padding-top: 45px;
-  color: $white-green;
-  font-size: 45px;
-  letter-spacing: 2px;
-}
-
-@mixin underlineH2() {
-  text-decoration: none;
-  border-bottom: 1px solid $white-green;
-}
-
-@mixin h3-novaSection() {
-  font-style: italic;
-  color: $smoke-white;
-  font-size: 35px;
-  padding-top: 20px;
-}
-
-@mixin p-novaSection {
-  font-size: 16px;
-  color: $white-green;
-  padding-top: 15px;
-  width: 300px;
-  margin: auto;
-}
-
-@mixin novaImagesHover() {
-  opacity: 1;
-  -ms-transform: scale(1.1); /* IE 9 */
-  -webkit-transform: scale(1.1); /* Safari 3-8 */
-  transform: scale(1.1);
-}
 
 body {
   font-family: Lato, sans-serif;
 }
 
-/* NAVIGATION */
-.bg-light {
-  background: #2b383c !important;
-  padding-top: 30px;
-  border-bottom: 4px solid $white-green;
-  font-size: 24px;
-  letter-spacing: 1px;
-
-  #brand-home {
-    color: $white-color;
-    border-top: 1px solid $white-green;
-    border-bottom: 1px solid $white-green;
-  }
-
-  .nav-link {
-    font-size: 20px;
-  }
-}
-
-.navbar-light .navbar-nav .active > .nav-link {
-  color: $white-color;
-  border-right: 2px solid $white-green;
-}
-
-#homeNav,
-#login-userNav {
-  border-left: 2px solid $white-green;
-}
-
-/* NAVBAR TOGGLER */
-
-.navbar-light .navbar-toggler {
-  border-color: $white-color;
-}
-
-@media (max-width: 991px) {
-  .bg-light {
-    padding-top: 30px;
-  }
-
-  #homeNav,
-  #login-userNav {
-    border-left: none;
-  }
-
-  .navbar-light .navbar-nav .active > .nav-link {
-    border: none;
-  }
-}
-
-/* Forms */
-form {
-  padding-top: 120px;
-}
-
-/* HOME */
-
-#home {
-  h1 {
-    position: absolute;
-    top: 85%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: $white-color;
-    font-size: 80px;
-    letter-spacing: 6px;
-    border: 1px solid $white-color;
-    border-radius: 2px;
-    z-index: 999;
-
-    p {
-      color: $white-green;
-    }
-
-    #header-text {
-      font-size: 20px;
-      letter-spacing: 2px;
-    }
-  }
-
-  .img-fluid {
-    background: no-repeat, center, center;
-    background-size: cover;
-    height: 100vh;
-    width: 102%;
-  }
-
-  #award-winner {
-    position: absolute;
-    top: 150px;
-    right: 155px;
-    width: 180px;
-    height: 166px;
-    text-align: center;
-    background: $white-green;
-    color: $white-color;
-    border-radius: 6px;
-    font-size: 27px;
-  }
-
-  #arrow {
-    border-style: solid;
-    border-width: 45px 88px 0 90px;
-    position: absolute;
-    top: 164px;
-    right: 1px;
-    border-color: #98ab7a transparent transparent transparent;
-  }
-}
-
-@media (max-width: 1048px) {
-  #home {
-    h1 {
-      top: 70%;
-      font-size: 2.4em;
-
-      #header-text {
-        font-size: 0.4em;
-        font-weight: bold;
-      }
-    }
-  }
-}
-
-/* Responsive Award Winner */
-@media (max-width: 991px) {
-  #home {
-    #award-winner {
-      width: 8.8em;
-      height: 8.84em;
-      font-size: 1em;
-      padding-top: 37px;
-      margin-top: 160px;
-    }
-
-    #arrow {
-      border-style: solid;
-      border-width: 30px 67px 0 73px;
-      position: absolute;
-      top: 139px;
-      right: 0px;
-      border-color: #98ab7a transparent transparent transparent;
-    }
-
-    h1 {
-      width: 90%;
-      margin-top: 80px;
-      font-size: 2.4em;
-
-      #header-text {
-        font-size: 0.4em;
-      }
-    }
-  }
-}
-
-@media (max-width: 874px) {
-  #home {
-    #award-winner {
-      top: 132px;
-      right: 30px;
-    }
-  }
-}
-
-@media (max-width: 694px) {
-  #home {
-    #award-winner {
-      top: 98px;
-      right: 30px;
-    }
-  }
-}
-
-@media (max-width: 630px) {
-  #home {
-    #award-winner {
-      display: none;
-    }
-  }
-}
-
-/* WELCOME TO NOVA CAPITAL */
-
-#welcome-nova-capital {
-  background-color: #27282b;
-  padding-bottom: 45px;
-
-  /* NOVA ARTICLE */
-
-  #nova-article {
-    h1 {
-      color: $smoke-white;
-      text-transform: uppercase;
-      text-align: center;
-      font-style: italic;
-      padding-top: 40px;
-    }
-
-    .img-fluid {
-      padding-top: 80px;
-      margin-left: 75px;
-      width: 105%;
-      height: 100vh;
-      opacity: 0.7;
-    }
-
-    article {
-      @include article-novaSection();
-
-      h2 {
-        @include h2-novaSection();
-        u {
-          @include underlineH2();
-        }
-      }
-
-      h3 {
-        @include h3-novaSection();
-      }
-
-      p {
-        @include p-novaSection();
-      }
-      h4 {
-        font-size: 15px;
-        color: $smoke-white;
-        padding-top: 35px;
-        width: 300px;
-        margin: auto;
-      }
-    }
-  }
-}
-
-/* NOVA ARTICLE RESPONSIVE */
-
-@media (max-width: 991px) {
-  #welcome-nova-capital {
-    #nova-article {
-      .img-fluid {
-        width: 100%;
-        height: auto;
-        margin-left: 0;
-      }
-
-      article {
-        width: 70%;
-        margin: auto;
-        height: auto;
-        z-index: 999;
-        margin-top: -100px;
-      }
-    }
-  }
-}
-
-@media (max-width: 800px) {
-  #welcome-nova-capital {
-    #nova-article {
-      article {
-        h2 {
-          font-size: 2em;
-        }
-        h3 {
-          font-size: 2em;
-        }
-        p {
-          font-size: 0.7em;
-        }
-        h4 {
-          font-size: 0.7em;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 700px) {
-  #welcome-nova-capital {
-    #nova-article {
-      article {
-        h2 {
-          font-size: 1.5em;
-        }
-        h3 {
-          font-size: 1.5em;
-        }
-        p {
-          font-size: 0.5em;
-          width: inherit;
-        }
-        h4 {
-          font-size: 0.5em;
-          width: inherit;
-        }
-      }
-    }
-  }
-}
-
-/* KITCHEN ARTICLE */
-
-#kitchen-article {
-  article {
-    @include article-novaSection();
-    position: absolute;
-    z-index: 999;
-    width: 600px;
-    margin-left: 125px;
-
-    h2 {
-      @include h2-novaSection();
-
-      u {
-        @include underlineH2();
-      }
-    }
-
-    h3 {
-      @include h3-novaSection();
-    }
-
-    p {
-      @include p-novaSection();
-    }
-  }
-
-  .img-fluid {
-    padding-top: 80px;
-    margin-left: -75px;
-    width: 105%;
-    height: 100vh;
-    opacity: 0.7;
-    transition: transform 0.2s;
-
-    &:hover {
-      @include novaImagesHover();
-    }
-  }
-}
-
-/* KITCHEN ARTICLE RESPONSIVE */
-
-@media (max-width: 991px) {
-  #welcome-nova-capital {
-    #kitchen-article {
-      article {
-        // position: absolute;
-        position: absolute;
-        width: 35%;
-        margin: auto;
-        margin-top: 107px;
-
-        h2 {
-          font-size: 2em;
-        }
-        h3 {
-          font-size: 1.6em;
-        }
-      }
-
-      .img-fluid {
-        width: 100%;
-        height: auto;
-        margin-left: 0;
-      }
-    }
-  }
-}
-
-@media (max-width: 870px) {
-  #welcome-nova-capital {
-    #kitchen-article {
-      article {
-        position: absolute;
-        height: auto;
-        h2 {
-          font-size: 1.6em;
-        }
-        h3 {
-          font-size: 1.2em;
-        }
-        p {
-          font-size: 0.5em;
-          width: auto;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 620px) {
-  #welcome-nova-capital {
-    #kitchen-article {
-      article {
-        h2 {
-          font-size: 0.9em;
-        }
-        h3 {
-          font-size: 0.9em;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 570px) {
-  #welcome-nova-capital {
-    #kitchen-article {
-      article {
-        display: none;
-      }
-    }
-  }
-}
-
-/* LOCATION */
-
-#location {
-  background-color: #27282b;
-  padding-bottom: 50px;
-
-  h1 {
-    color: $smoke-white;
-    letter-spacing: 2px;
-  }
-  article {
-    text-align: center;
-    color: $white-green;
-    font-size: 30px;
-
-    ul {
-      li {
-        text-decoration: none;
-        list-style-type: none;
-        padding: 10px 0;
-      }
-    }
-  }
-}
-
-@media (max-width: 991px) {
-  #location {
-    iframe {
-      width: 90%;
-      display: block;
-      margin: 0 auto;
-    }
-  }
-}
-
-@media (max-width: 720px) {
-  #location {
-    h1 {
-      font-size: 1em;
-    }
-
-    article ul {
-      margin-top: 23px;
-
-      li {
-        padding: 0;
-        font-size: 0.8em;
-      }
-    }
-  }
-}
-
-
-/* DEVELOPMENTS */
-
-#developments {
-  background-color: whitesmoke;
-  padding: 50px 0;
-
-  h1 {
-    padding: 50px 0;
-  }
-
-  .card-img {
-    height: 42vh;
-    transition: transform 0.2s;
-
-    &:hover {
-      @include novaImagesHover();
-    }
-  }
-
-  ul {
-    li {
-      font-size: 14px;
-      padding-top: 7px;
-      list-style-type: none;
-    }
-  }
-
-  .btn-primary {
-    background-color: #a99748;
-    border: 1px solid #a99748;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    letter-spacing: 1px;
-
-    &:hover {
-      background-color: #161b32;
-      border: 1px solid #161b32;
-    }
-  }
-}
-
-
-/* FOOTER */
-
-footer {
-  background-color: $black-color;
-  color: $white-color;
-  padding: 30px;
-
-  h2 {
-    text-align: center;
-    margin: auto;
-  }
-  .fab {
-    margin: auto;
-    font-size: 40px;
-    color: $white-color;
-    padding: 7px;
-  }
-}
-
-@media (max-width: 991px) {
-  footer {
-    h2 {
-      font-size: 1.5em;
-    }
-
-    #icons {
-      text-align: center;
-      padding-top: 10px;
-    }
-  }
-}
-
-/*  ABOUT */
-
-#about {
-  h1 {
-    padding-top: 110px;
-  }
-}
