--- a/scss/partials-css/about.scss
+++ b/scss/partials-css/about.scss
@@ -4,7 +4,39 @@
 /*  ABOUT */
 
 #about {
+  background-color: #27282b;
+  padding-bottom: 50px;
   h1 {
     padding-top: 110px;
+    padding-bottom: 50px;
+    text-align: center;
+    color: $white-color;
+  }
+
+  article {
+    text-align: center;
+    margin: auto;
+    p {
+      color: $white-color;
+      font-size: 20px;
+    }
+  }
+}
+
+@media (max-width: 991px) {
+
+  #about {
+
+
+    .img-fluid {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    article {
+      padding-top: 50px;
+      font-size: 1em;
+    }
   }
 }
