--- a/scss/partials-css/home.css
+++ b/scss/partials-css/home.css
@@ -1,9 +1,10 @@
 /* HOME */
 #home h1 {
   position: absolute;
-  top: 85%;
+  top: 70%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   color: #ffffff;
   font-size: 80px;
   letter-spacing: 6px;
@@ -11,19 +12,23 @@
   border-radius: 2px;
   z-index: 999;
 }
+
 #home h1 p {
   color: #98ab7a;
 }
+
 #home h1 #header-text {
   font-size: 20px;
   letter-spacing: 2px;
 }
+
 #home .img-fluid {
   background: no-repeat, center, center;
   background-size: cover;
   height: 100vh;
   width: 102%;
 }
+
 #home #award-winner {
   position: absolute;
   top: 150px;
@@ -36,6 +41,7 @@
   border-radius: 6px;
   font-size: 27px;
 }
+
 #home #arrow {
   border-style: solid;
   border-width: 45px 88px 0 90px;
@@ -55,6 +61,7 @@
     font-weight: bold;
   }
 }
+
 /* Responsive Award Winner */
 @media (max-width: 991px) {
   #home #award-winner {
@@ -81,22 +88,24 @@
     font-size: 0.4em;
   }
 }
+
 @media (max-width: 874px) {
   #home #award-winner {
     top: 132px;
     right: 30px;
   }
 }
+
 @media (max-width: 694px) {
   #home #award-winner {
     top: 98px;
     right: 30px;
   }
 }
+
 @media (max-width: 630px) {
   #home #award-winner {
     display: none;
   }
 }
-
 /*# sourceMappingURL=home.css.map */
