--- a/scss/style.css
+++ b/scss/style.css
@@ -488,8 +488,60 @@ form {
   padding-top: 120px;
 }
 
+.has-search .form-control {
+  padding-left: 2.375rem;
+}
+.has-search .form-control-search {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  width: 2.375rem;
+  height: 2.375rem;
+  line-height: 2.375rem;
+  text-align: center;
+  pointer-events: none;
+}
+
+.has-email .form-control {
+  padding-left: 2.375rem;
+}
+.has-email .form-control-feedback-email {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  width: 2.375rem;
+  height: 2.375rem;
+  line-height: 2.375rem;
+  text-align: center;
+  pointer-events: none;
+}
+.has-email .form-control-feedback-email .fa-envelope {
+  background-color: #000000;
+}
+
+.has-password .form-control {
+  padding-left: 2.375rem;
+}
+.has-password .form-control-feedback-password {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  width: 2.375rem;
+  height: 2.375rem;
+  line-height: 2.375rem;
+  text-align: center;
+  pointer-events: none;
+}
+.has-password .form-control-feedback-password .fa-key {
+  background-color: #000000;
+}
+
 body {
   font-family: Lato, sans-serif;
+}
+
+.btn {
+  width: 90px;
 }
 
 /*# sourceMappingURL=style.css.map */
