--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,9 +9,15 @@
 @import "partials-css/developments";
 @import "partials-css/about";
 @import "partials-css/forms";
+@import "partials-css/font-awesome-icons";
+
 
 
 body {
   font-family: Lato, sans-serif;
 }
+
+.btn { width: 90px;}
+
+
 
