--- a/scss/partials-css/novacapital.scss
+++ b/scss/partials-css/novacapital.scss
@@ -24,7 +24,7 @@
       margin-left: 75px;
       width: 105%;
       height: 100vh;
-      opacity: 0.7;
+      //opacity: 0.7;
     }
 
     article {
@@ -153,12 +153,8 @@
     margin-left: -75px;
     width: 105%;
     height: 100vh;
-    opacity: 0.7;
+    //opacity: 0.7;
     transition: transform 0.2s;
-
-    &:hover {
-      @include novaImagesHover();
-    }
   }
 }
 
