--- a/scss/style.css
+++ b/scss/style.css
@@ -7,11 +7,13 @@
   font-size: 24px;
   letter-spacing: 1px;
 }
+
 .bg-light #brand-home {
   color: #ffffff;
   border-top: 1px solid #98ab7a;
   border-bottom: 1px solid #98ab7a;
 }
+
 .bg-light .nav-link {
   font-size: 20px;
 }
@@ -35,22 +37,22 @@
   .bg-light {
     padding-top: 30px;
   }
-
   #homeNav,
-#login-userNav {
+  #login-userNav {
     border-left: none;
   }
-
   .navbar-light .navbar-nav .active > .nav-link {
     border: none;
   }
 }
+
 /* HOME */
 #home h1 {
   position: absolute;
   top: 70%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   color: #ffffff;
   font-size: 80px;
   letter-spacing: 6px;
@@ -58,19 +60,23 @@
   border-radius: 2px;
   z-index: 999;
 }
+
 #home h1 p {
   color: #98ab7a;
 }
+
 #home h1 #header-text {
   font-size: 20px;
   letter-spacing: 2px;
 }
+
 #home .img-fluid {
   background: no-repeat, center, center;
   background-size: cover;
   height: 100vh;
   width: 102%;
 }
+
 #home #award-winner {
   position: absolute;
   top: 150px;
@@ -83,6 +89,7 @@
   border-radius: 6px;
   font-size: 27px;
 }
+
 #home #arrow {
   border-style: solid;
   border-width: 45px 88px 0 90px;
@@ -102,6 +109,7 @@
     font-weight: bold;
   }
 }
+
 /* Responsive Award Winner */
 @media (max-width: 991px) {
   #home #award-winner {
@@ -128,29 +136,34 @@
     font-size: 0.4em;
   }
 }
+
 @media (max-width: 874px) {
   #home #award-winner {
     top: 132px;
     right: 30px;
   }
 }
+
 @media (max-width: 694px) {
   #home #award-winner {
     top: 98px;
     right: 30px;
   }
 }
+
 @media (max-width: 630px) {
   #home #award-winner {
     display: none;
   }
 }
+
 /* WELCOME TO NOVA CAPITAL */
 #welcome-nova-capital {
   background-color: #27282b;
   padding-bottom: 45px;
   /* NOVA ARTICLE */
 }
+
 #welcome-nova-capital #nova-article h1 {
   color: #d9d7e5;
   text-transform: uppercase;
@@ -158,6 +171,7 @@
   font-style: italic;
   padding-top: 40px;
 }
+
 #welcome-nova-capital #nova-article .img-fluid {
   padding-top: 80px;
   margin-left: 75px;
@@ -165,6 +179,7 @@
   height: 100vh;
   opacity: 0.7;
 }
+
 #welcome-nova-capital #nova-article article {
   background-color: #36393d;
   vertical-align: middle;
@@ -172,22 +187,26 @@
   text-align: center;
   height: 80vh;
 }
+
 #welcome-nova-capital #nova-article article h2 {
   padding-top: 45px;
   color: #98ab7a;
   font-size: 45px;
   letter-spacing: 2px;
 }
+
 #welcome-nova-capital #nova-article article h2 u {
   text-decoration: none;
   border-bottom: 1px solid #98ab7a;
 }
+
 #welcome-nova-capital #nova-article article h3 {
   font-style: italic;
   color: #d9d7e5;
   font-size: 35px;
   padding-top: 20px;
 }
+
 #welcome-nova-capital #nova-article article p {
   font-size: 16px;
   color: #98ab7a;
@@ -195,6 +214,7 @@
   width: 300px;
   margin: auto;
 }
+
 #welcome-nova-capital #nova-article article h4 {
   font-size: 15px;
   color: #d9d7e5;
@@ -218,6 +238,7 @@
     margin-top: -100px;
   }
 }
+
 @media (max-width: 800px) {
   #welcome-nova-capital #nova-article article h2 {
     font-size: 2em;
@@ -232,6 +253,7 @@
     font-size: 0.7em;
   }
 }
+
 @media (max-width: 700px) {
   #welcome-nova-capital #nova-article article h2 {
     font-size: 1.5em;
@@ -248,6 +270,7 @@
     width: inherit;
   }
 }
+
 /* KITCHEN ARTICLE */
 #kitchen-article article {
   background-color: #36393d;
@@ -260,22 +283,26 @@
   width: 600px;
   margin-left: 125px;
 }
+
 #kitchen-article article h2 {
   padding-top: 45px;
   color: #98ab7a;
   font-size: 45px;
   letter-spacing: 2px;
 }
+
 #kitchen-article article h2 u {
   text-decoration: none;
   border-bottom: 1px solid #98ab7a;
 }
+
 #kitchen-article article h3 {
   font-style: italic;
   color: #d9d7e5;
   font-size: 35px;
   padding-top: 20px;
 }
+
 #kitchen-article article p {
   font-size: 16px;
   color: #98ab7a;
@@ -283,21 +310,16 @@
   width: 300px;
   margin: auto;
 }
+
 #kitchen-article .img-fluid {
   padding-top: 80px;
   margin-left: -75px;
   width: 105%;
   height: 100vh;
-  opacity: 0.7;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
   transition: transform 0.2s;
-}
-#kitchen-article .img-fluid:hover {
-  opacity: 1;
-  -ms-transform: scale(1.1);
-  /* IE 9 */
-  -webkit-transform: scale(1.1);
-  /* Safari 3-8 */
-  transform: scale(1.1);
+  transition: transform 0.2s, -webkit-transform 0.2s;
 }
 
 /* KITCHEN ARTICLE RESPONSIVE */
@@ -320,6 +342,7 @@
     margin-left: 0;
   }
 }
+
 @media (max-width: 870px) {
   #welcome-nova-capital #kitchen-article article {
     position: absolute;
@@ -336,6 +359,7 @@
     width: auto;
   }
 }
+
 @media (max-width: 620px) {
   #welcome-nova-capital #kitchen-article article h2 {
     font-size: 0.9em;
@@ -344,25 +368,30 @@
     font-size: 0.9em;
   }
 }
+
 @media (max-width: 570px) {
   #welcome-nova-capital #kitchen-article article {
     display: none;
   }
 }
+
 /* LOCATION */
 #location {
   background-color: #27282b;
   padding-bottom: 50px;
 }
+
 #location h1 {
   color: #d9d7e5;
   letter-spacing: 2px;
 }
+
 #location article {
   text-align: center;
   color: #98ab7a;
   font-size: 30px;
 }
+
 #location article ul li {
   text-decoration: none;
   list-style-type: none;
@@ -376,6 +405,7 @@
     margin: 0 auto;
   }
 }
+
 @media (max-width: 720px) {
   #location h1 {
     font-size: 1em;
@@ -388,16 +418,19 @@
     font-size: 0.8em;
   }
 }
+
 /* FOOTER */
 footer {
   background-color: #000000;
   color: #ffffff;
   padding: 30px;
 }
+
 footer h2 {
   text-align: center;
   margin: auto;
 }
+
 footer .fab {
   margin: auto;
   font-size: 40px;
@@ -414,39 +447,46 @@ footer .fab {
     padding-top: 10px;
   }
 }
+
 /* DEVELOPMENTS */
 #developments {
   background-color: whitesmoke;
   padding: 50px 0;
 }
+
 #developments h1 {
   padding: 50px 0;
 }
+
 #developments .card-img {
   height: 42vh;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
   transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
 }
+
 #developments .card-img:hover {
   opacity: 1;
-  -ms-transform: scale(1.1);
   /* IE 9 */
   -webkit-transform: scale(1.1);
   /* Safari 3-8 */
   transform: scale(1.1);
 }
+
 #developments ul li {
   font-size: 14px;
   padding-top: 7px;
   list-style-type: none;
 }
+
 #developments .btn-primary {
   background-color: #a99748;
   border: 1px solid #a99748;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
   border-radius: 0;
   letter-spacing: 1px;
 }
+
 #developments .btn-primary:hover {
   background-color: #161b32;
   border: 1px solid #161b32;
@@ -457,16 +497,19 @@ footer .fab {
   background-color: #27282b;
   padding-bottom: 50px;
 }
+
 #about h1 {
   padding-top: 110px;
   padding-bottom: 50px;
   text-align: center;
   color: #ffffff;
 }
+
 #about article {
   text-align: center;
   margin: auto;
 }
+
 #about article p {
   color: #ffffff;
   font-size: 20px;
@@ -483,6 +526,7 @@ footer .fab {
     font-size: 1em;
   }
 }
+
 /* Forms */
 form {
   padding-top: 120px;
@@ -491,6 +535,7 @@ form {
 .has-search .form-control {
   padding-left: 2.375rem;
 }
+
 .has-search .form-control-search {
   position: absolute;
   z-index: 2;
@@ -505,6 +550,7 @@ form {
 .has-email .form-control {
   padding-left: 2.375rem;
 }
+
 .has-email .form-control-feedback-email {
   position: absolute;
   z-index: 2;
@@ -515,6 +561,7 @@ form {
   text-align: center;
   pointer-events: none;
 }
+
 .has-email .form-control-feedback-email .fa-envelope {
   background-color: #000000;
 }
@@ -522,6 +569,7 @@ form {
 .has-password .form-control {
   padding-left: 2.375rem;
 }
+
 .has-password .form-control-feedback-password {
   position: absolute;
   z-index: 2;
@@ -532,6 +580,7 @@ form {
   text-align: center;
   pointer-events: none;
 }
+
 .has-password .form-control-feedback-password .fa-key {
   background-color: #000000;
 }
@@ -543,5 +592,4 @@ body {
 .btn {
   width: 90px;
 }
-
 /*# sourceMappingURL=style.css.map */
